--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,6 @@
+.check{
+  color: blue;
+}
 .container {
   padding: 0 2rem;
 }
@@ -107,6 +110,7 @@
   height: 1em;
   margin-left: 0.5rem;
 }
+
 
 @media (max-width: 600px) {
   .grid {
